# my_cpp_projects

Final_Game_Programming_Project/: CMakeLists.txt  README.md  main.cpp
Final_Game_Programming_Project/Account_Management/Login_Management/: Login.cpp  Login.h
Final_Game_Programming_Project/Account_Management/New_Account/: New_Account.cpp  New_Account.h
Final_Game_Programming_Project/Controller/: Controller.cpp  Controller.h
Final_Game_Programming_Project/Model/: Model.cpp  Model.h
Final_Game_Programming_Project/Model/Game_Modes/Multiplayer/: Multiplayer.cpp  Multiplayer.h
Final_Game_Programming_Project/Model/Game_Modes/Singleplayer/: Singleplayer.cpp  Singleplayer.h
Final_Game_Programming_Project/Player/: Player.cpp  Player.h
Final_Game_Programming_Project/Player/Player_Game_Roles/: Character.cpp  Character.h  Game_Character.cpp  Game_Character.h
Final_Game_Programming_Project/Player/Player_Game_Roles/Hunter/: Hunter.cpp  Hunter.h
Final_Game_Programming_Project/Player/Player_Game_Roles/Warrior/: Warrior.cpp  Warrior.h
Final_Game_Programming_Project/Viewer/: Viewer.cpp  Viewer.h
Library_Project/: main.cpp
Library_Project/Accounts/: Account.cpp  Account.h  Roles.h
Library_Project/Accounts/Users/: Users.cpp  Users.h
Library_Project/Accounts/Users/user_files/: e_username  my_username  new_test_user  new_username  testing_user  testing_user_2
Login_System_GUI/: CMakeLists.txt  Login_Window.cpp  Login_Window.h  main.cpp
Login_System_GUI/Accounts/: Account.cpp  Account.h
Login_System_GUI/Accounts/Register/: Register_Account.cpp  Register_Account.h
Login_System_GUI/Users/: my_username  new_username
